added generic style for text boxes, default font set to roboto, fixed formatting
Co-authored-by: ABJ-Samuel <99690645+ABJ-Samuel@users.noreply.github.com>

--- a/styles/global.css
+++ b/styles/global.css
@@ -5,3 +5,7 @@
 body {
     background-color: #90B9D7;
 }
+
+input[type=text], input[type=search] {
+    @apply border-gray-300 bg-white h-10 rounded-md focus:outline-none px-2;
+}
